Fixed bold font on Firefox

--- a/sass/theme/global/mixins/typography.scss
+++ b/sass/theme/global/mixins/typography.scss
@@ -28,5 +28,6 @@ p, span, li {
 	font-size: 1.2rem;
 	strong {
 		@include _work-sans-semibold;
+		font-weight: initial;
 	}
 }
